--- a/applications/admin-console/pom.xml
+++ b/applications/admin-console/pom.xml
@@ -43,8 +43,8 @@
         <dependency>
             <groupId>com.extjs</groupId>
             <artifactId>gxt</artifactId>
+            <!--<version>2.1.0</version>-->
             <version>2.0.1</version>
-            <!--<scope>provided</scope>-->
         </dependency>
 
         <dependency>
