--- a/maven-plugin/pom.xml
+++ b/maven-plugin/pom.xml
@@ -9,12 +9,19 @@
     <modelVersion>4.0.0</modelVersion>
     <artifactId>maven-elastic-grid-plugin</artifactId>
     <packaging>maven-plugin</packaging>
+    <version>0.9.3</version>
     <name>Maven Plugin for Elastic Grid</name>
     <prerequisites>
         <maven>2.0.8</maven>
     </prerequisites>
 
     <dependencies>
+        <dependency>
+            <groupId>com.elasticgrid</groupId>
+            <artifactId>elastic-grid-manager</artifactId>
+            <version>${pom.version}</version>
+        </dependency>
+        <!-- Extends Rio plugin -->
         <dependency>
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-rio-plugin</artifactId>
