--- a/examples/calculator/calculator1/pom.xml
+++ b/examples/calculator/calculator1/pom.xml
@@ -14,6 +14,12 @@
     <dependencies>
 
         <dependency>
+            <groupId>commons-httpclient</groupId>
+            <artifactId>commons-httpclient</artifactId>
+            <version>3.1</version>
+        </dependency>
+
+        <dependency>
             <groupId>org.rioproject</groupId>
             <artifactId>rio</artifactId>
             <version>4.0-M3</version>
