Added note on upgrade to GXT 2.1.0.

--- a/applications/admin-console/pom.xml
+++ b/applications/admin-console/pom.xml
@@ -43,7 +43,7 @@
         <dependency>
             <groupId>com.extjs</groupId>
             <artifactId>gxt</artifactId>
-            <!--<version>2.1.0</version>-->
+            <!--<version>2.1.0</version>-->     <!-- NOTE: there seems to be a regression in 2.1.0 -->
             <version>2.0.1</version>
         </dependency>
 
