--- a/applications/admin-console/pom.xml
+++ b/applications/admin-console/pom.xml
@@ -43,8 +43,8 @@
         <dependency>
             <groupId>com.extjs</groupId>
             <artifactId>gxt</artifactId>
-            <!--<version>2.1.0</version>-->     <!-- NOTE: there seems to be a regression in 2.1.0 -->
-            <version>2.0.1</version>
+            <version>2.1.0</version>
+            <!--<version>2.0.1</version>-->
         </dependency>
 
         <dependency>
@@ -148,7 +148,7 @@
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>gwt-maven-plugin</artifactId>
-                <version>1.1</version>
+                <version>1.2</version>
                 <configuration>
                     <module>com.elasticgrid.admin.Admin</module>
                     <runTarget>com.elasticgrid.admin.Admin/Amin.html</runTarget>
@@ -274,7 +274,7 @@
     </build>
 
     <properties>
-        <gwt-version>1.7.0</gwt-version>
+        <gwt-version>2.0.0</gwt-version>
         <!--<restlet-version>2.0-M3</restlet-version>-->
     </properties>
 </project>
