--- a/applications/admin-console/pom.xml
+++ b/applications/admin-console/pom.xml
@@ -43,7 +43,8 @@
         <dependency>
             <groupId>com.extjs</groupId>
             <artifactId>gxt</artifactId>
-            <version>2.1.0</version>
+            <!--<version>2.1.0</version>-->
+            <version>2.0.1</version>
         </dependency>
 
         <dependency>
@@ -273,7 +274,8 @@
     </build>
 
     <properties>
-        <gwt-version>2.0.0</gwt-version>
+        <gwt-version>1.7.0</gwt-version>
+        <!--<gwt-version>2.0.0</gwt-version>-->
         <!--<restlet-version>2.0-M3</restlet-version>-->
     </properties>
 </project>
